--- a/code_datasets/4_lstm/lstim univariate LOOP.ipynb
+++ b/code_datasets/4_lstm/lstim univariate LOOP.ipynb
@@ -2,9 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using TensorFlow backend.\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import glob\n",
@@ -25,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +64,8 @@
     "    dataset = scaler.fit_transform(dataset)\n",
     "    \n",
     "    # split into train and test sets\n",
-    "    train_size = int(32112)\n",
+    "    print('Spliting into train and test')\n",
+    "    train_size = int(33600)\n",
     "    test_size = len(dataset) - train_size\n",
     "    train, test = dataset[0:train_size,:], dataset[train_size:len(dataset),:]\n",
     "    \n",
@@ -70,6 +79,7 @@
     "    testX = numpy.reshape(testX, (testX.shape[0], 1, testX.shape[1]))\n",
     "    \n",
     "    # create and fit the LSTM network\n",
+    "    print('Creating and fitting the LSTM network')\n",
     "    model = Sequential()\n",
     "    model.add(LSTM(100, input_shape=(1, look_back)))\n",
     "    model.add(Dense(1))\n",
@@ -77,6 +87,7 @@
     "    model.fit(trainX, trainY, epochs=5, batch_size=70, verbose=2)\n",
     "    \n",
     "    # make predictions\n",
+    "    print('Making predictions')\n",
     "    trainPredict = model.predict(trainX)\n",
     "    testPredict = model.predict(testX)\n",
     "    \n",
@@ -87,6 +98,7 @@
     "    testY = scaler.inverse_transform([testY])\n",
     "    \n",
     "    # calculate root mean squared error\n",
+    "    print('Calculating metrics')\n",
     "    trainScore = math.sqrt(mean_squared_error(trainY[0], trainPredict[:,0]))\n",
     "    testScore = math.sqrt(mean_squared_error(testY[0], testPredict[:,0]))\n",
     "    mae = metrics.mean_absolute_error(testY[0], testPredict[:,0])\n",
@@ -96,39 +108,251 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "/Users/mariabelenalberti/OneDrive - Universidad Torcuato Di Tella/Tesis/code_datasets/1_data_frames/univariate/MAC000049.csv\n",
+      "Spliting into train and test\n",
+      "Creating and fitting the LSTM network\n",
+      "Epoch 1/5\n",
+      " - 2s - loss: 0.0083\n",
+      "Epoch 2/5\n",
+      " - 1s - loss: 0.0078\n",
+      "Epoch 3/5\n",
+      " - 1s - loss: 0.0078\n",
+      "Epoch 4/5\n",
+      " - 2s - loss: 0.0078\n",
+      "Epoch 5/5\n",
+      " - 2s - loss: 0.0077\n",
+      "Making predictions\n",
+      "Calculating metrics\n",
+      "/Users/mariabelenalberti/OneDrive - Universidad Torcuato Di Tella/Tesis/code_datasets/1_data_frames/univariate/MAC000048.csv\n",
+      "Spliting into train and test\n",
+      "Creating and fitting the LSTM network\n",
+      "Epoch 1/5\n",
+      " - 2s - loss: 0.0028\n",
+      "Epoch 2/5\n",
+      " - 1s - loss: 0.0025\n",
+      "Epoch 3/5\n",
+      " - 1s - loss: 0.0025\n",
+      "Epoch 4/5\n",
+      " - 2s - loss: 0.0025\n",
+      "Epoch 5/5\n",
+      " - 1s - loss: 0.0025\n",
+      "Making predictions\n",
+      "Calculating metrics\n",
+      "/Users/mariabelenalberti/OneDrive - Universidad Torcuato Di Tella/Tesis/code_datasets/1_data_frames/univariate/MAC004463.csv\n",
+      "Spliting into train and test\n",
+      "Creating and fitting the LSTM network\n",
+      "Epoch 1/5\n",
+      " - 2s - loss: 0.0041\n",
+      "Epoch 2/5\n",
+      " - 1s - loss: 0.0038\n",
+      "Epoch 3/5\n",
+      " - 1s - loss: 0.0037\n",
+      "Epoch 4/5\n",
+      " - 1s - loss: 0.0037\n",
+      "Epoch 5/5\n",
+      " - 2s - loss: 0.0037\n",
+      "Making predictions\n",
+      "Calculating metrics\n",
+      "/Users/mariabelenalberti/OneDrive - Universidad Torcuato Di Tella/Tesis/code_datasets/1_data_frames/univariate/MAC004509.csv\n",
+      "Spliting into train and test\n",
+      "Creating and fitting the LSTM network\n",
+      "Epoch 1/5\n",
+      " - 2s - loss: 0.0064\n",
+      "Epoch 2/5\n",
+      " - 1s - loss: 0.0060\n",
+      "Epoch 3/5\n",
+      " - 1s - loss: 0.0060\n",
+      "Epoch 4/5\n",
+      " - 2s - loss: 0.0059\n",
+      "Epoch 5/5\n",
+      " - 1s - loss: 0.0059\n",
+      "Making predictions\n",
+      "Calculating metrics\n",
+      "/Users/mariabelenalberti/OneDrive - Universidad Torcuato Di Tella/Tesis/code_datasets/1_data_frames/univariate/MAC004455.csv\n",
+      "Spliting into train and test\n",
+      "Creating and fitting the LSTM network\n",
+      "Epoch 1/5\n",
+      " - 2s - loss: 0.0068\n",
+      "Epoch 2/5\n",
+      " - 1s - loss: 0.0064\n",
+      "Epoch 3/5\n",
+      " - 1s - loss: 0.0064\n",
+      "Epoch 4/5\n",
+      " - 1s - loss: 0.0063\n",
+      "Epoch 5/5\n",
+      " - 1s - loss: 0.0062\n",
+      "Making predictions\n",
+      "Calculating metrics\n",
+      "/Users/mariabelenalberti/OneDrive - Universidad Torcuato Di Tella/Tesis/code_datasets/1_data_frames/univariate/MAC004494.csv\n",
+      "Spliting into train and test\n",
+      "Creating and fitting the LSTM network\n",
+      "Epoch 1/5\n",
+      " - 2s - loss: 0.0056\n",
+      "Epoch 2/5\n",
+      " - 1s - loss: 0.0050\n",
+      "Epoch 3/5\n",
+      " - 1s - loss: 0.0050\n",
+      "Epoch 4/5\n",
+      " - 2s - loss: 0.0050\n",
+      "Epoch 5/5\n",
+      " - 2s - loss: 0.0049\n",
+      "Making predictions\n",
+      "Calculating metrics\n",
+      "/Users/mariabelenalberti/OneDrive - Universidad Torcuato Di Tella/Tesis/code_datasets/1_data_frames/univariate/MAC004491.csv\n",
+      "Spliting into train and test\n",
+      "Creating and fitting the LSTM network\n",
+      "Epoch 1/5\n",
+      " - 2s - loss: 0.0057\n",
+      "Epoch 2/5\n",
+      " - 1s - loss: 0.0050\n",
+      "Epoch 3/5\n",
+      " - 1s - loss: 0.0050\n",
+      "Epoch 4/5\n",
+      " - 1s - loss: 0.0049\n",
+      "Epoch 5/5\n",
+      " - 1s - loss: 0.0049\n",
+      "Making predictions\n",
+      "Calculating metrics\n",
+      "/Users/mariabelenalberti/OneDrive - Universidad Torcuato Di Tella/Tesis/code_datasets/1_data_frames/univariate/MAC000027.csv\n",
+      "Spliting into train and test\n",
+      "Creating and fitting the LSTM network\n",
+      "Epoch 1/5\n",
+      " - 2s - loss: 0.0032\n",
+      "Epoch 2/5\n",
+      " - 1s - loss: 0.0028\n",
+      "Epoch 3/5\n",
+      " - 1s - loss: 0.0028\n",
+      "Epoch 4/5\n",
+      " - 1s - loss: 0.0028\n",
+      "Epoch 5/5\n",
+      " - 2s - loss: 0.0028\n",
+      "Making predictions\n",
+      "Calculating metrics\n",
+      "/Users/mariabelenalberti/OneDrive - Universidad Torcuato Di Tella/Tesis/code_datasets/1_data_frames/univariate/MAC000019.csv\n",
+      "Spliting into train and test\n",
+      "Creating and fitting the LSTM network\n",
       "Epoch 1/5\n",
       " - 2s - loss: 0.0050\n",
       "Epoch 2/5\n",
-      " - 1s - loss: 0.0013\n",
+      " - 2s - loss: 0.0047\n",
       "Epoch 3/5\n",
-      " - 1s - loss: 0.0011\n",
+      " - 2s - loss: 0.0047\n",
       "Epoch 4/5\n",
-      " - 1s - loss: 0.0011\n",
+      " - 2s - loss: 0.0046\n",
       "Epoch 5/5\n",
-      " - 1s - loss: 0.0011\n"
+      " - 1s - loss: 0.0046\n",
+      "Making predictions\n",
+      "Calculating metrics\n",
+      "/Users/mariabelenalberti/OneDrive - Universidad Torcuato Di Tella/Tesis/code_datasets/1_data_frames/univariate/MAC000018.csv\n",
+      "Spliting into train and test\n",
+      "Creating and fitting the LSTM network\n",
+      "Epoch 1/5\n",
+      " - 2s - loss: 0.0037\n",
+      "Epoch 2/5\n",
+      " - 2s - loss: 0.0032\n",
+      "Epoch 3/5\n",
+      " - 1s - loss: 0.0032\n",
+      "Epoch 4/5\n",
+      " - 2s - loss: 0.0031\n",
+      "Epoch 5/5\n",
+      " - 1s - loss: 0.0031\n",
+      "Making predictions\n",
+      "Calculating metrics\n",
+      "/Users/mariabelenalberti/OneDrive - Universidad Torcuato Di Tella/Tesis/code_datasets/1_data_frames/univariate/MAC000255.csv\n",
+      "Spliting into train and test\n",
+      "Creating and fitting the LSTM network\n",
+      "Epoch 1/5\n",
+      " - 2s - loss: 0.0046\n",
+      "Epoch 2/5\n",
+      " - 1s - loss: 0.0042\n",
+      "Epoch 3/5\n",
+      " - 2s - loss: 0.0042\n",
+      "Epoch 4/5\n",
+      " - 1s - loss: 0.0041\n",
+      "Epoch 5/5\n",
+      " - 1s - loss: 0.0041\n",
+      "Making predictions\n",
+      "Calculating metrics\n",
+      "/Users/mariabelenalberti/OneDrive - Universidad Torcuato Di Tella/Tesis/code_datasets/1_data_frames/univariate/MAC000131.csv\n",
+      "Spliting into train and test\n",
+      "Creating and fitting the LSTM network\n",
+      "Epoch 1/5\n",
+      " - 2s - loss: 0.0074\n",
+      "Epoch 2/5\n",
+      " - 1s - loss: 0.0060\n",
+      "Epoch 3/5\n",
+      " - 2s - loss: 0.0060\n",
+      "Epoch 4/5\n",
+      " - 2s - loss: 0.0059\n",
+      "Epoch 5/5\n",
+      " - 2s - loss: 0.0059\n",
+      "Making predictions\n",
+      "Calculating metrics\n"
      ]
     }
    ],
    "source": [
     "# load the dataset\n",
-    "folder = \"/Users/mariabelenalberti/OneDrive - Universidad Torcuato Di Tella/pilot/\"\n",
-    "path = folder\n",
+    "path = \"/Users/mariabelenalberti/OneDrive - Universidad Torcuato Di Tella/Tesis/code_datasets/1_data_frames/univariate/\"\n",
     "all_files = glob.glob(path + \"/*.csv\")\n",
     "\n",
-    "lista = []\n",
+    "train_score_t = []\n",
+    "test_score_t = []\n",
+    "mae_t = []\n",
     "for filename in all_files:\n",
-    "    result = lstm_univariate_loop(filename)\n",
-    "    lista.append(result)\n",
-    "\n",
-    "my_df = pd.DataFrame(lista)\n",
-    "my_df.to_csv('results.csv', index=False, header=False)"
+    "    dataframe = pd.read_csv(filename)\n",
+    "    dataframe.set_index(\"tstp\", inplace = True)\n",
+    "    print(str(filename))\n",
+    "    trainScore, testScore, mae = lstm_univariate_loop(dataframe)\n",
+    "    train_score_t.append(trainScore)\n",
+    "    test_score_t.append(testScore)\n",
+    "    mae_t.append(mae)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.3372479200170346, 0.053284088289906086, 0.08805725039329065, 0.10984216807207813, 0.18240827547161947, 0.09965450662124148, 0.09053800765170035, 0.06042147533438983, 0.06383979136582126, 0.022718655718666204, 0.10501272982277422, 0.08209726987976666]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(mae_t)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'plt' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-615ced8405c7>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mplt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mplot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmae_t\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mplt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshow\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'plt' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "plt.plot(mae_t)\n",
+    "plt.show()"
    ]
   },
   {
