size of train-test

--- a/code_datasets/1_data_frames/multivariate/multivariate.ipynb
+++ b/code_datasets/1_data_frames/multivariate/multivariate.ipynb
@@ -167,7 +167,7 @@
    "outputs": [],
    "source": [
     "folder = \"/Users/mariabelenalberti/OneDrive - Universidad Torcuato Di Tella/Tesis/code_datasets/1_data_frames/univariate/\"\n",
-    "file = \"LCLid_complete.csv\"\n",
+    "file = \"household_save.csv\"\n",
     "household_files = pd.read_csv(folder+file)"
    ]
   },
@@ -178,37 +178,6 @@
    "outputs": [],
    "source": [
     "household_files = household_files['household'].values.tolist()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['MAC000018',\n",
-       " 'MAC000019',\n",
-       " 'MAC000027',\n",
-       " 'MAC000048',\n",
-       " 'MAC000049',\n",
-       " 'MAC000131',\n",
-       " 'MAC000255',\n",
-       " 'MAC004455',\n",
-       " 'MAC004463',\n",
-       " 'MAC004491',\n",
-       " 'MAC004494',\n",
-       " 'MAC004509']"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "household_files"
    ]
   },
   {
