covariates, lstm loop cov
added weekend covaraiate and deleted apparente temerature.
changes metrics for lstm multi  and added graphs to depict them

--- a/code_datasets/1_data_frames/multivariate/multivariate.ipynb
+++ b/code_datasets/1_data_frames/multivariate/multivariate.ipynb
@@ -65,9 +65,9 @@
        "      <th>temperature</th>\n",
        "      <th>dewPoint</th>\n",
        "      <th>pressure</th>\n",
-       "      <th>apparentTemperature</th>\n",
        "      <th>windSpeed</th>\n",
        "      <th>humidity</th>\n",
+       "      <th>weekend</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -79,9 +79,9 @@
        "      <td>12.12</td>\n",
        "      <td>10.97</td>\n",
        "      <td>1008.10</td>\n",
-       "      <td>12.12</td>\n",
        "      <td>5.90</td>\n",
        "      <td>0.93</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -91,9 +91,9 @@
        "      <td>12.12</td>\n",
        "      <td>10.97</td>\n",
        "      <td>1008.10</td>\n",
-       "      <td>12.12</td>\n",
        "      <td>5.90</td>\n",
        "      <td>0.93</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -103,9 +103,9 @@
        "      <td>12.59</td>\n",
        "      <td>11.02</td>\n",
        "      <td>1007.88</td>\n",
-       "      <td>12.59</td>\n",
        "      <td>6.06</td>\n",
        "      <td>0.90</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -115,9 +115,9 @@
        "      <td>12.59</td>\n",
        "      <td>11.02</td>\n",
        "      <td>1007.88</td>\n",
-       "      <td>12.59</td>\n",
        "      <td>6.06</td>\n",
        "      <td>0.90</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -127,9 +127,9 @@
        "      <td>12.45</td>\n",
        "      <td>11.04</td>\n",
        "      <td>1007.95</td>\n",
-       "      <td>12.45</td>\n",
        "      <td>5.31</td>\n",
        "      <td>0.91</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -143,12 +143,12 @@
        "3 2012-01-01 01:30:00       12.89          238        12.59     11.02   \n",
        "4 2012-01-01 02:00:00       11.54          229        12.45     11.04   \n",
        "\n",
-       "   pressure  apparentTemperature  windSpeed  humidity  \n",
-       "0   1008.10                12.12       5.90      0.93  \n",
-       "1   1008.10                12.12       5.90      0.93  \n",
-       "2   1007.88                12.59       6.06      0.90  \n",
-       "3   1007.88                12.59       6.06      0.90  \n",
-       "4   1007.95                12.45       5.31      0.91  "
+       "   pressure  windSpeed  humidity  weekend  \n",
+       "0   1008.10       5.90      0.93        1  \n",
+       "1   1008.10       5.90      0.93        1  \n",
+       "2   1007.88       6.06      0.90        1  \n",
+       "3   1007.88       6.06      0.90        1  \n",
+       "4   1007.95       5.31      0.91        1  "
       ]
      },
      "execution_count": 4,
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,37 +182,395 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "348"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(household_files)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "MAC000018\n",
-      "MAC000019\n",
-      "MAC000027\n",
-      "MAC000048\n",
-      "MAC000049\n",
-      "MAC000131\n",
-      "MAC000255\n",
-      "MAC004455\n",
-      "MAC004463\n",
-      "MAC004491\n",
-      "MAC004494\n",
-      "MAC004509\n"
+      "filename number 1\n",
+      "filename number 2\n",
+      "filename number 3\n",
+      "filename number 4\n",
+      "filename number 5\n",
+      "filename number 6\n",
+      "filename number 7\n",
+      "filename number 8\n",
+      "filename number 9\n",
+      "filename number 10\n",
+      "filename number 11\n",
+      "filename number 12\n",
+      "filename number 13\n",
+      "filename number 14\n",
+      "filename number 15\n",
+      "filename number 16\n",
+      "filename number 17\n",
+      "filename number 18\n",
+      "filename number 19\n",
+      "filename number 20\n",
+      "filename number 21\n",
+      "filename number 22\n",
+      "filename number 23\n",
+      "filename number 24\n",
+      "filename number 25\n",
+      "filename number 26\n",
+      "filename number 27\n",
+      "filename number 28\n",
+      "filename number 29\n",
+      "filename number 30\n",
+      "filename number 31\n",
+      "filename number 32\n",
+      "filename number 33\n",
+      "filename number 34\n",
+      "filename number 35\n",
+      "filename number 36\n",
+      "filename number 37\n",
+      "filename number 38\n",
+      "filename number 39\n",
+      "filename number 40\n",
+      "filename number 41\n",
+      "filename number 42\n",
+      "filename number 43\n",
+      "filename number 44\n",
+      "filename number 45\n",
+      "filename number 46\n",
+      "filename number 47\n",
+      "filename number 48\n",
+      "filename number 49\n",
+      "filename number 50\n",
+      "filename number 51\n",
+      "filename number 52\n",
+      "filename number 53\n",
+      "filename number 54\n",
+      "filename number 55\n",
+      "filename number 56\n",
+      "filename number 57\n",
+      "filename number 58\n",
+      "filename number 59\n",
+      "filename number 60\n",
+      "filename number 61\n",
+      "filename number 62\n",
+      "filename number 63\n",
+      "filename number 64\n",
+      "filename number 65\n",
+      "filename number 66\n",
+      "filename number 67\n",
+      "filename number 68\n",
+      "filename number 69\n",
+      "filename number 70\n",
+      "filename number 71\n",
+      "filename number 72\n",
+      "filename number 73\n",
+      "filename number 74\n",
+      "filename number 75\n",
+      "filename number 76\n",
+      "filename number 77\n",
+      "filename number 78\n",
+      "filename number 79\n",
+      "filename number 80\n",
+      "filename number 81\n",
+      "filename number 82\n",
+      "filename number 83\n",
+      "filename number 84\n",
+      "filename number 85\n",
+      "filename number 86\n",
+      "filename number 87\n",
+      "filename number 88\n",
+      "filename number 89\n",
+      "filename number 90\n",
+      "filename number 91\n",
+      "filename number 92\n",
+      "filename number 93\n",
+      "filename number 94\n",
+      "filename number 95\n",
+      "filename number 96\n",
+      "filename number 97\n",
+      "filename number 98\n",
+      "filename number 99\n",
+      "filename number 100\n",
+      "filename number 101\n",
+      "filename number 102\n",
+      "filename number 103\n",
+      "filename number 104\n",
+      "filename number 105\n",
+      "filename number 106\n",
+      "filename number 107\n",
+      "filename number 108\n",
+      "filename number 109\n",
+      "filename number 110\n",
+      "filename number 111\n",
+      "filename number 112\n",
+      "filename number 113\n",
+      "filename number 114\n",
+      "filename number 115\n",
+      "filename number 116\n",
+      "filename number 117\n",
+      "filename number 118\n",
+      "filename number 119\n",
+      "filename number 120\n",
+      "filename number 121\n",
+      "filename number 122\n",
+      "filename number 123\n",
+      "filename number 124\n",
+      "filename number 125\n",
+      "filename number 126\n",
+      "filename number 127\n",
+      "filename number 128\n",
+      "filename number 129\n",
+      "filename number 130\n",
+      "filename number 131\n",
+      "filename number 132\n",
+      "filename number 133\n",
+      "filename number 134\n",
+      "filename number 135\n",
+      "filename number 136\n",
+      "filename number 137\n",
+      "filename number 138\n",
+      "filename number 139\n",
+      "filename number 140\n",
+      "filename number 141\n",
+      "filename number 142\n",
+      "filename number 143\n",
+      "filename number 144\n",
+      "filename number 145\n",
+      "filename number 146\n",
+      "filename number 147\n",
+      "filename number 148\n",
+      "filename number 149\n",
+      "filename number 150\n",
+      "filename number 151\n",
+      "filename number 152\n",
+      "filename number 153\n",
+      "filename number 154\n",
+      "filename number 155\n",
+      "filename number 156\n",
+      "filename number 157\n",
+      "filename number 158\n",
+      "filename number 159\n",
+      "filename number 160\n",
+      "filename number 161\n",
+      "filename number 162\n",
+      "filename number 163\n",
+      "filename number 164\n",
+      "filename number 165\n",
+      "filename number 166\n",
+      "filename number 167\n",
+      "filename number 168\n",
+      "filename number 169\n",
+      "filename number 170\n",
+      "filename number 171\n",
+      "filename number 172\n",
+      "filename number 173\n",
+      "filename number 174\n",
+      "filename number 175\n",
+      "filename number 176\n",
+      "filename number 177\n",
+      "filename number 178\n",
+      "filename number 179\n",
+      "filename number 180\n",
+      "filename number 181\n",
+      "filename number 182\n",
+      "filename number 183\n",
+      "filename number 184\n",
+      "filename number 185\n",
+      "filename number 186\n",
+      "filename number 187\n",
+      "filename number 188\n",
+      "filename number 189\n",
+      "filename number 190\n",
+      "filename number 191\n",
+      "filename number 192\n",
+      "filename number 193\n",
+      "filename number 194\n",
+      "filename number 195\n",
+      "filename number 196\n",
+      "filename number 197\n",
+      "filename number 198\n",
+      "filename number 199\n",
+      "filename number 200\n",
+      "filename number 201\n",
+      "filename number 202\n",
+      "filename number 203\n",
+      "filename number 204\n",
+      "filename number 205\n",
+      "filename number 206\n",
+      "filename number 207\n",
+      "filename number 208\n",
+      "filename number 209\n",
+      "filename number 210\n",
+      "filename number 211\n",
+      "filename number 212\n",
+      "filename number 213\n",
+      "filename number 214\n",
+      "filename number 215\n",
+      "filename number 216\n",
+      "filename number 217\n",
+      "filename number 218\n",
+      "filename number 219\n",
+      "filename number 220\n",
+      "filename number 221\n",
+      "filename number 222\n",
+      "filename number 223\n",
+      "filename number 224\n",
+      "filename number 225\n",
+      "filename number 226\n",
+      "filename number 227\n",
+      "filename number 228\n",
+      "filename number 229\n",
+      "filename number 230\n",
+      "filename number 231\n",
+      "filename number 232\n",
+      "filename number 233\n",
+      "filename number 234\n",
+      "filename number 235\n",
+      "filename number 236\n",
+      "filename number 237\n",
+      "filename number 238\n",
+      "filename number 239\n",
+      "filename number 240\n",
+      "filename number 241\n",
+      "filename number 242\n",
+      "filename number 243\n",
+      "filename number 244\n",
+      "filename number 245\n",
+      "filename number 246\n",
+      "filename number 247\n",
+      "filename number 248\n",
+      "filename number 249\n",
+      "filename number 250\n",
+      "filename number 251\n",
+      "filename number 252\n",
+      "filename number 253\n",
+      "filename number 254\n",
+      "filename number 255\n",
+      "filename number 256\n",
+      "filename number 257\n",
+      "filename number 258\n",
+      "filename number 259\n",
+      "filename number 260\n",
+      "filename number 261\n",
+      "filename number 262\n",
+      "filename number 263\n",
+      "filename number 264\n",
+      "filename number 265\n",
+      "filename number 266\n",
+      "filename number 267\n",
+      "filename number 268\n",
+      "filename number 269\n",
+      "filename number 270\n",
+      "filename number 271\n",
+      "filename number 272\n",
+      "filename number 273\n",
+      "filename number 274\n",
+      "filename number 275\n",
+      "filename number 276\n",
+      "filename number 277\n",
+      "filename number 278\n",
+      "filename number 279\n",
+      "filename number 280\n",
+      "filename number 281\n",
+      "filename number 282\n",
+      "filename number 283\n",
+      "filename number 284\n",
+      "filename number 285\n",
+      "filename number 286\n",
+      "filename number 287\n",
+      "filename number 288\n",
+      "filename number 289\n",
+      "filename number 290\n",
+      "filename number 291\n",
+      "filename number 292\n",
+      "filename number 293\n",
+      "filename number 294\n",
+      "filename number 295\n",
+      "filename number 296\n",
+      "filename number 297\n",
+      "filename number 298\n",
+      "filename number 299\n",
+      "filename number 300\n",
+      "filename number 301\n",
+      "filename number 302\n",
+      "filename number 303\n",
+      "filename number 304\n",
+      "filename number 305\n",
+      "filename number 306\n",
+      "filename number 307\n",
+      "filename number 308\n",
+      "filename number 309\n",
+      "filename number 310\n",
+      "filename number 311\n",
+      "filename number 312\n",
+      "filename number 313\n",
+      "filename number 314\n",
+      "filename number 315\n",
+      "filename number 316\n",
+      "filename number 317\n",
+      "filename number 318\n",
+      "filename number 319\n",
+      "filename number 320\n",
+      "filename number 321\n",
+      "filename number 322\n",
+      "filename number 323\n",
+      "filename number 324\n",
+      "filename number 325\n",
+      "filename number 326\n",
+      "filename number 327\n",
+      "filename number 328\n",
+      "filename number 329\n",
+      "filename number 330\n",
+      "filename number 331\n",
+      "filename number 332\n",
+      "filename number 333\n",
+      "filename number 334\n",
+      "filename number 335\n",
+      "filename number 336\n",
+      "filename number 337\n",
+      "filename number 338\n",
+      "filename number 339\n",
+      "filename number 340\n",
+      "filename number 341\n",
+      "filename number 342\n",
+      "filename number 343\n",
+      "filename number 344\n",
+      "filename number 345\n",
+      "filename number 346\n",
+      "filename number 347\n",
+      "filename number 348\n"
      ]
     }
    ],
    "source": [
+    "i = 0\n",
     "for file in household_files:\n",
-    "    print(file)\n",
+    "    i = i + 1\n",
+    "    print('filename number ' + str(i))\n",
     "    folder = '/Users/mariabelenalberti/OneDrive - Universidad Torcuato Di Tella/Tesis/code_datasets/1_data_frames/univariate/'\n",
     "    df = pd.read_csv(folder+str(file)+\".csv\")\n",
-    "    df['tstp']= pd.to_datetime(df['tstp'],format = '%Y/%m/%d %H:%M:%S')\n",
+    "    df['tstp']= pd.to_datetime(df['tstp'],format = '%d/%m/%Y %H:%M')\n",
     "    merge = pd.merge(df,covariates, on='tstp')\n",
     "    df = pd.DataFrame(merge)\n",
-    "    df.to_csv(str(file)+\".csv\",index=False)"
+    "    df.to_csv('/Users/mariabelenalberti/OneDrive - Universidad Torcuato Di Tella/Tesis/code_datasets/1_data_frames/multivariate/'+str(file)+\".csv\",index=False)"
    ]
   },
   {
