details on graphs
added details on graphs for avg basic model and avg pro model

--- a/1_code_datasets/2_multivariate/multivariate.ipynb
+++ b/1_code_datasets/2_multivariate/multivariate.ipynb
@@ -65,9 +65,9 @@
        "      <th>temperature</th>\n",
        "      <th>dewPoint</th>\n",
        "      <th>pressure</th>\n",
-       "      <th>apparentTemperature</th>\n",
        "      <th>windSpeed</th>\n",
        "      <th>humidity</th>\n",
+       "      <th>weekend</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -79,9 +79,9 @@
        "      <td>12.12</td>\n",
        "      <td>10.97</td>\n",
        "      <td>1008.10</td>\n",
-       "      <td>12.12</td>\n",
        "      <td>5.90</td>\n",
        "      <td>0.93</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -91,9 +91,9 @@
        "      <td>12.12</td>\n",
        "      <td>10.97</td>\n",
        "      <td>1008.10</td>\n",
-       "      <td>12.12</td>\n",
        "      <td>5.90</td>\n",
        "      <td>0.93</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -103,9 +103,9 @@
        "      <td>12.59</td>\n",
        "      <td>11.02</td>\n",
        "      <td>1007.88</td>\n",
-       "      <td>12.59</td>\n",
        "      <td>6.06</td>\n",
        "      <td>0.90</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -115,9 +115,9 @@
        "      <td>12.59</td>\n",
        "      <td>11.02</td>\n",
        "      <td>1007.88</td>\n",
-       "      <td>12.59</td>\n",
        "      <td>6.06</td>\n",
        "      <td>0.90</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -127,9 +127,9 @@
        "      <td>12.45</td>\n",
        "      <td>11.04</td>\n",
        "      <td>1007.95</td>\n",
-       "      <td>12.45</td>\n",
        "      <td>5.31</td>\n",
        "      <td>0.91</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -143,12 +143,12 @@
        "3 2012-01-01 01:30:00       12.89          238        12.59     11.02   \n",
        "4 2012-01-01 02:00:00       11.54          229        12.45     11.04   \n",
        "\n",
-       "   pressure  apparentTemperature  windSpeed  humidity  \n",
-       "0   1008.10                12.12       5.90      0.93  \n",
-       "1   1008.10                12.12       5.90      0.93  \n",
-       "2   1007.88                12.59       6.06      0.90  \n",
-       "3   1007.88                12.59       6.06      0.90  \n",
-       "4   1007.95                12.45       5.31      0.91  "
+       "   pressure  windSpeed  humidity  weekend  \n",
+       "0   1008.10       5.90      0.93        1  \n",
+       "1   1008.10       5.90      0.93        1  \n",
+       "2   1007.88       6.06      0.90        1  \n",
+       "3   1007.88       6.06      0.90        1  \n",
+       "4   1007.95       5.31      0.91        1  "
       ]
      },
      "execution_count": 4,
@@ -162,88 +162,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
-    "folder = \"/Users/mariabelenalberti/OneDrive - Universidad Torcuato Di Tella/Tesis/code_datasets/1_data_frames/univariate/\"\n",
-    "file = \"LCLid_complete.csv\"\n",
+    "folder = \"/Users/mariabelenalberti/OneDrive - Universidad Torcuato Di Tella/Tesis/code_datasets/1_data_frames/multivariate/comfortable_tou/\"\n",
+    "file = \"comfortable_tou.csv\"\n",
     "household_files = pd.read_csv(folder+file)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
-    "household_files = household_files['household'].values.tolist()"
+    "household_files = household_files['LCLid'].values.tolist()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['MAC000018',\n",
-       " 'MAC000019',\n",
-       " 'MAC000027',\n",
-       " 'MAC000048',\n",
-       " 'MAC000049',\n",
-       " 'MAC000131',\n",
-       " 'MAC000255',\n",
-       " 'MAC004455',\n",
-       " 'MAC004463',\n",
-       " 'MAC004491',\n",
-       " 'MAC004494',\n",
-       " 'MAC004509']"
+       "14"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "household_files"
+    "len(household_files)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "MAC000018\n",
-      "MAC000019\n",
-      "MAC000027\n",
-      "MAC000048\n",
-      "MAC000049\n",
-      "MAC000131\n",
-      "MAC000255\n",
-      "MAC004455\n",
-      "MAC004463\n",
-      "MAC004491\n",
-      "MAC004494\n",
-      "MAC004509\n"
+      "filename number 1\n",
+      "filename number 2\n",
+      "filename number 3\n",
+      "filename number 4\n",
+      "filename number 5\n",
+      "filename number 6\n",
+      "filename number 7\n",
+      "filename number 8\n",
+      "filename number 9\n",
+      "filename number 10\n",
+      "filename number 11\n",
+      "filename number 12\n",
+      "filename number 13\n",
+      "filename number 14\n"
      ]
     }
    ],
    "source": [
+    "i = 0\n",
     "for file in household_files:\n",
-    "    print(file)\n",
-    "    folder = '/Users/mariabelenalberti/OneDrive - Universidad Torcuato Di Tella/Tesis/code_datasets/1_data_frames/univariate/'\n",
+    "    i = i + 1\n",
+    "    print('filename number ' + str(i))\n",
+    "    folder = '/Users/mariabelenalberti/OneDrive - Universidad Torcuato Di Tella/Tesis/code_datasets/1_data_frames/univariate/Comfortable/'\n",
     "    df = pd.read_csv(folder+str(file)+\".csv\")\n",
-    "    df['tstp']= pd.to_datetime(df['tstp'],format = '%Y/%m/%d %H:%M:%S')\n",
+    "    df['tstp']= pd.to_datetime(df['tstp'],format = '%d/%m/%Y %H:%M')\n",
     "    merge = pd.merge(df,covariates, on='tstp')\n",
     "    df = pd.DataFrame(merge)\n",
-    "    df.to_csv(str(file)+\".csv\",index=False)"
+    "    df.to_csv('/Users/mariabelenalberti/OneDrive - Universidad Torcuato Di Tella/Tesis/code_datasets/1_data_frames/multivariate/comfortable_tou/'+str(file)+\".csv\",index=False)"
    ]
   },
   {
