--- a/4_lstm/lstim univariate LOOP.ipynb
+++ b/4_lstm/lstim univariate LOOP.ipynb
@@ -382,7 +382,9 @@
     "    df = pd.read_csv(filename)\n",
     "    df.set_index(\"tstp\", inplace = True)\n",
     "    rmsle_i = lstm_univariate_loop(df)\n",
-    "    rmsle_t.append(round(rmsle_i,2))"
+    "    rmsle_t.append(round(rmsle_i,2))\n",
+    "    print('filename number ' + str(i) + ' of ' + str(len(all_files)))\n",
+    "    "
    ]
   },
   {
@@ -404,27 +406,30 @@
     }
    ],
    "source": [
-    "plt.subplot(211)\n",
-    "plt.figure(figsize = (7,7))\n",
-    "plt.scatter(range(len(rmsle_t)),rmsle_t)\n",
-    "plt.plot(range(len(rmsle_t)),[min(rmsle_t)]*len(rmsle_t),color = 'red')\n",
-    "plt.plot(range(len(rmsle_t)),[np.average(rmsle_t)]*len(rmsle_t),color = 'pink')\n",
-    "plt.plot(range(len(rmsle_t)),[max(rmsle_t)]*len(rmsle_t),color = 'black')\n",
-    "plt.yticks([min(rmsle_t),np.average(rmsle_t),max(rmsle_t),0.5],[str(min(rmsle_t))+' (Min)',str(np.average(rmsle_t)) + ' (Avg)',str(max(rmsle_t))+' (Max)','0.5'])\n",
-    "plt.title('Scatter plot with RMSLE results',fontsize = 12)\n",
+    "plt.figure(figsize = (10,5))\n",
+    "plt.subplot(121)\n",
+    "plt.scatter(range(len(rmsle_t)),rmsle_t,color = 'yellow',alpha = 0.5)\n",
+    "plt.plot(range(len(rmsle_t)),[min(rmsle_t)]*len(rmsle_t),color = 'grey',linestyle = '--')\n",
+    "plt.plot(range(len(rmsle_t)),[round(np.average(rmsle_t),3)]*len(rmsle_t),color = 'grey',linestyle = ':')\n",
+    "plt.plot(range(len(rmsle_t)),[max(rmsle_t)]*len(rmsle_t),color = 'grey',linestyle = '-.')\n",
+    "plt.yticks([min(rmsle_t),round(np.average(rmsle_t),3),max(rmsle_t)],[str(min(rmsle_t)) + ' (Min)',\n",
+    "                                                            str(round(np.average(rmsle_t),3)) + ' (Avg)',\n",
+    "                                                                         str(max(rmsle_t))+' (Max)'])\n",
+    "plt.title('RMSLE scatter plot',fontsize = 12)\n",
     "plt.xlabel('Households')\n",
     "plt.ylabel('RMSLE')\n",
     "\n",
-    "plt.subplot(222)\n",
-    "plt.figure(figsize = (7,7))\n",
-    "plt.hist(rmsle_t)\n",
-    "plt.axvline(x=min(rmsle_t), color='red', linestyle='dashed', linewidth=2)\n",
-    "plt.axvline(x=np.average(rmsle_t), color='black', linestyle='dashed', linewidth=2)\n",
-    "plt.title(\"RMSLE results' histogram\",fontsize = 12)\n",
-    "plt.xlabel('RMSLE')\n",
+    "plt.subplot(122)\n",
+    "plt.hist(rmsle_t,color = 'yellow',alpha = 0.5)\n",
+    "plt.axvline(x=min(rmsle_t), color='grey', linestyle='--', linewidth=2)\n",
+    "plt.axvline(x=round(np.average(rmsle_t),3), color='grey', linestyle=':', linewidth=2)\n",
+    "plt.axvline(x=max(rmsle_t), color='grey', linestyle='-.', linewidth=2)\n",
     "\n",
-    "plt.savefig('/Users/mariabelenalberti/OneDrive - Universidad Torcuato Di Tella/Tesis/plots/4_lstm_uni/RMSLE_adversity_tou')\n",
-    "plt.show()"
+    "plt.title(\"RMSLE histogram\",fontsize = 12)\n",
+    "plt.xlabel('RMSLE')\n",
+    "plt.savefig('/Users/mariabelenalberti/OneDrive - Universidad Torcuato Di Tella/Tesis/plots/2_average_model_pro/RMSLE_comfortable_tou')\n",
+    "\n",
+    "plt.show();"
    ]
   },
   {
